--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<meta name="description" content="">
+    <meta charset="UTF-8">
+    <title>Sophie Bluel - Architecte d'intérieur</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
+        rel="stylesheet">
+    <meta name="description" content="">
     <script src="login.js" defer></script>
-	<link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
-<header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
-	<nav>
-		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li class="loginTexte">login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<section class="blocSection">
-<h2 class="flexCentre logInTexte2">Log in</h2 >
-    <form class="flexCentre" action="./index.html" method="post" id="login-form">
-        <label class="emailTexte" for="email">E-mail:</label>
-        <input class="section1" type="email" id="email" name="email" required><br>
-        <label class="mpTexte1" for="password">Mot de passe:</label>
-        <input class="passeword" type="text" id="password" name="password" required><br>
-        <input class="bouton" type="submit" value="Se connecter"></input>
-        <button class="mpBouton" type="submit">
-            <u class="mpTexte2" id="password-reset">Mot de passe oublié</u>
-        </button>
-    </form>
-</section>
+    <header>
+        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <nav>
+            <ul>
+                <li>projets</li>
+                <li>contact</li>
+                <li class="loginTexte" id="loginBouton">login</li>
+                <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="blockSection">
+        <h2 class="flexCentre logInTexte2">Log in</h2>
+        <form class="flexCentre" action="user.html" method="post" id="login-form">
+            <label class="emailTexte" for="email">E-mail:</label>
+            <input class="section1" type="email" id="email" name="email" required><br>
+            <label class="mpTexte1" for="password">Mot de passe:</label>
+            <input class="passeword" type="text" id="password" name="password" required><br>
+            <input class="bouton" type="submit" value="Se connecter"></input>
+            <button class="mpBouton" type="submit">
+                <u class="mpTexte2" id="password-reset">Mot de passe oublié</u>
+            </button>
+        </form>
+    </section>
 
 
 
@@ -47,4 +50,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
