--- a/FrontEnd/user.html
+++ b/FrontEnd/user.html
@@ -10,19 +10,23 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
-	<script src="index.js" defer></script>
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="script.js" defer></script>
+	<script src="https://kit.fontawesome.com/5420a2db7e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
+	<div id="editionApparence">
+		<div id="top-icon"><i class="fa-sharp fa-solid fa-pen-to-square"></i></div>
+		<p class="editionTexte"> Mode édition </p>
+	</div>
 	<header>
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
 				<li>projets</li>
 				<li>contact</li>
-				<li><a id="boutonLogin" href="login.html">login</a></li>
+				<li><a id="boutonLogout" href="./index.html">logout</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 			</ul>
 		</nav>
@@ -44,17 +48,59 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
+			<div class="projetSection">
+				<h2>Mes Projets</h2>
+				<div class="blockModifier"><i class="fa-sharp fa-solid fa-pen-to-square"></i><a href="#modalApparence"
+						class="modifierApparence"><span class="boutonModifier"> modifier </span></a></div>
+			</div>
+			<aside id="modalApparence" class="modal" aria-hidden="true" role="modal" aria-labelledby="galerieTitre"
+				style="display:none">
+				<div class="blockModal modalSup">
+					<div class="boutonC-P">
+						<button class="boutonC">X</button>
+						<button class="boutonP"><i class="fa-sharp fa-solid fa-arrow-left"></i></button>
+					</div>
+					<h2 id="galerieTitre">Galerie photo</h2>
+					<div class="containerImg">
+					</div>
+					<form id="modalForm">
+						<div class="miniature">
+							<div class="corbeil-icon corbeilHide">
+								<i class="fa-solid fa-image"></i>
+							</div>
+							<input type="file" name="image" id="image" accept="image">
+							<div id="exportImage"></div>
+							<label for="image" class="ajouterTexte">+ Ajouter photo</label>
+							<p class="imageApparence">jpg, png : 4mo max</p>
+						</div>
+						<label for="title" class="formTexte">Titre</label>
+						<input type="text" name="title" id="title">
+
+						<label for="category" class="formTexte">Catégorie</label>
+						<select name="category" id="category">
+							<option value="1">Objets</option>
+							<option value="2">Appartements</option>
+							<option value="3">Hotels & restaurants</option>
+						</select>
+						<div class="validerApparence"></div>
+						<input id="boutonValider" type="submit" value="Valider">
+					</form>
+					<div class="blockA-S">
+						<div class="validerApparence"></div>
+						<button class="texteAjouter">Ajouter une photo</button>
+						<p class="gallerySup">Supprimer la galerie</p>
+					</div>
+				</div>
+			</aside>
 			<div class="apparenceFiltres">
 				<button id="tous" class="filtres">Tous</button>
 				<button id="objets" class="filtres">Objets</button>
 				<button id="appartements" class="filtres">Appartements</button>
 				<button id="hotels" class="filtres">Hôtels & restaurants</button>
 			</div>
+			<div class="gallery">
 
-			<div class="gallery"></div>
-
-
+			</div>
 		</section>
 		<section id="contact">
 			<h2>Contact</h2>
@@ -70,7 +116,6 @@
 			</form>
 		</section>
 	</main>
-
 	<footer>
 		<nav>
 			<ul>
