--- a/FrontEnd/user.html
+++ b/FrontEnd/user.html
@@ -10,8 +10,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
+	<script src="script.js" defer></script>
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="script.js"defer></script>
 	<script src="https://kit.fontawesome.com/5420a2db7e.js" crossorigin="anonymous"></script>
 </head>
 
@@ -70,7 +70,7 @@
 							</div>
 							<input type="file" name="image" id="image" accept="image">
 							<div id="exportImage"></div>
-							<label for="image" class="ajouterTexte">+ Ajouter photo</label>
+							<label for="image" class="ajouterTexte">+ Ajouter une photo</label>
 							<p class="imageApparence">jpg, png : 4mo max</p>
 						</div>
 						<label for="title" class="formTexte">Titre</label>
@@ -87,8 +87,8 @@
 					</form>
 					<div class="blockA-S">
 						<div class="validerApparence"></div>
-						<button class="texteAjouter">Ajouter une photo</button>
-						<p class="gallerySup">Supprimer la galerie</p>
+						<button class="texteAjouter">Ajouter un projet</button>
+						<p class="gallerySup"></p>
 					</div>
 				</div>
 			</aside>
